CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

PROJECT(libxmlmm)

FIND_PACKAGE(LibXml2 2.7.8 REQUIRED)

SET(Boost_ADDITIONAL_VERSIONS "1.44.0" "1.45.0" "1.46.1")
FIND_PACKAGE(Boost 1.44.0 REQUIRED)

INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR})

ADD_SUBDIRECTORY(libxmlmm)
ADD_SUBDIRECTORY(examples)

# Doxygen
SET(CMAKE_MODULE_PATH ${CMAKE_CURRENT_SOURCE_DIR})
SET(DOXYFILE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/apidoc)
SET(DOXYFILE_SOURCE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/src)
SET(DOXYFILE_LATEX "NO")
SET(PROJECT_VERSION "0.4.0")

SET(PACKAGE "libxmlmm")
SET(VERSION "0.4.0")
SET(top_srcdir ${CMAKE_CURRENT_SOURCE_DIR})


INCLUDE(UseDoxygen)
